# picocaml

./: Cargo.toml  README.md
.github/workflows/: pages.yml
docs/: specification.md
playground/: Cargo.toml
playground/src/: lib.rs
playground/web/: app.js  index.html  style.css
src/: adapter.rs  ast.rs  eval.rs  lib.rs  types.rs  value.rs
src/libs/: adapter.rs  eval.rs  execution.rs  lib.rs  structure.rs  type_inference.rs  type_system.rs  value.rs
src/libs/analysis/: parser.rs  tokenizer.rs
src/libs/execution/: environment.rs  evaluation.rs
src/libs/structure/: environment.rs  type_environment.rs
src/libs/syntax/: ast.rs  value.rs
src/libs/type_system/: inference.rs  type_environment.rs  type_scheme.rs  types.rs  unification.rs
tests/: test_program.picocaml
