[package]
name = "picocaml"
version = "0.1.0"
edition = "2024"

[workspace]
members = [".", "playground"]
resolver = "3"

[lib]
name = "picocaml"
path = "src/libs/lib.rs"

[dependencies]
anyhow = "1.0.103"
thiserror = "2.0.18"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rustyline = "18.0.1"
